Bug 202606 - kio_sftp ignores port settings in the ssh configuration file
Summary: kio_sftp ignores port settings in the ssh configuration file
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: sftp (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Andreas Schneider
URL:
Keywords:
: 99708 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-05 12:47 UTC by Ivo Anjo
Modified: 2021-11-08 20:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivo Anjo 2009-08-05 12:47:36 UTC
Version:            (using KDE 4.3.0)
OS:                Linux
Installed from:    SuSE RPMs

I have inside my ~/.ssh/config, something like

Host xpto
        HostName 192.168.0.2
        Port    2323

If I use fish://xpto/, it works, but if I use sftp://xpto/, the "Port" configuration is ignored, and the connection is made to port 22 instead of the specified one.
Comment 1 Andreas Schneider 2009-09-08 17:14:27 UTC
kio_sftp has been rewritten using libssh. SUSE has backported the rewrite to 4.3. However this is currently not supported by libssh but will be available with libssh 0.4.
Comment 2 Andreas Schneider 2009-09-09 11:08:40 UTC
*** Bug 99708 has been marked as a duplicate of this bug. ***
Comment 3 Andreas Schneider 2009-11-05 17:39:20 UTC
SVN commit 1045269 by anschneider:

Read and apply settings from ~/.ssh/config.

BUG: 202606


 M  +3 -0      kio_sftp.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1045269