Read and apply settings from ~/.ssh/config.

BUG: 202606

svn path=/trunk/KDE/kdebase/runtime/; revision=1045269